--- a/application.properties
+++ b/application.properties
@@ -5,8 +5,8 @@ spring.data.mongodb.uri=mongodb+srv://root:${MONGO_PASSWORD}@cluster0.uovkc8l.mo
 # PostgreSQL cloud configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.password=${POSTGRESQL_PASSWORD}
-spring.datasource.username=qkzbupso
-spring.datasource.url=jdbc:postgresql://trumpet.db.elephantsql.com/qkzbupso
+spring.datasource.username=ojcodwig
+spring.datasource.url=jdbc:postgresql://trumpet.db.elephantsql.com/ojcodwig
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.hikari.maximum-pool-size=1
