adds kafka configuration

--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,9 @@
 # Common configuration
 logging.level.telran=trace
+
 # Mongodb configuration
 spring.data.mongodb.uri=mongodb+srv://root:${MONGO_PASSWORD}@cluster0.uovkc8l.mongodb.net/college?retryWrites=true&w=majority
+
 # PostgreSQL cloud configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.password=${POSTGRESQL_PASSWORD}
@@ -10,3 +12,21 @@ spring.datasource.url=jdbc:postgresql://trumpet.db.elephantsql.com/ojcodwig
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.hikari.maximum-pool-size=1
+
+# Karafka cloud configuration
+spring.kafka.bootstrap-servers=glider.srvs.cloudkafka.com
+spring.kafka.properties.security.protocol=SASL_SSL
+spring.kafka.properties.sasl.mechanism=SCRAM-SHA-512
+spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="gbhfmvzr" password="${KARAFKA_PASSWORD}";
+spring.cloud.stream.bindings.avgPulseProbeConsumer-in-0.destination=gbhfmvzr-avg-values
+spring.cloud.stream.bindings.avgPulseProbeConsumer-in-0.group=gbhfmvzr-average-populator
+app.avg.binding.name=avgValues-out-0
+spring.cloud.stream.bindings.avgValues-out-0.destination=gbhfmvzr-avg-values
+spring.cloud.stream.bindings.pulseProbeConsumerJumps-in-0.destination=gbhfmvzr-default
+spring.cloud.stream.bindings.pulseProbeConsumerJumps-in-0.group=gbhfmvzr-jumps-detector
+spring.cloud.stream.bindings.pulseProbeConsumerAvg-in-0.destination=gbhfmvzr-default
+spring.cloud.stream.bindings.pulseProbeConsumerAvg-in-0.group=gbhfmvzr-average-reducer
+app.jumps.binding.name=jumps-out-0
+spring.cloud.stream.bindings.jumps-out-0.destination=gbhfmvzr-jumps
+spring.cloud.stream.bindings.jumpsConsumer-in-0.destination=gbhfmvzr-jumps
+spring.cloud.stream.bindings.jumpsConsumer-in-0.group=gbhfmvzr-jumps-notifier
