adds redis configuration

--- a/application.properties
+++ b/application.properties
@@ -30,3 +30,9 @@ app.jumps.binding.name=jumps-out-0
 spring.cloud.stream.bindings.jumps-out-0.destination=gbhfmvzr-jumps
 spring.cloud.stream.bindings.jumpsConsumer-in-0.destination=gbhfmvzr-jumps
 spring.cloud.stream.bindings.jumpsConsumer-in-0.group=gbhfmvzr-jumps-notifier
+
+# Redis configuration
+spring.data.redis.host=redis-16143.c250.eu-central-1-1.ec2.cloud.redislabs.com
+spring.data.redis.port=16143
+spring.data.redis.username=default
+spring.data.redis.password=${REDIS_PASSWORD}
