--- a/application.properties
+++ b/application.properties
@@ -14,22 +14,22 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.hikari.maximum-pool-size=1
 
 # Karafka cloud configuration
-spring.kafka.bootstrap-servers=glider.srvs.cloudkafka.com:9094
+spring.kafka.bootstrap-servers=sulky.srvs.cloudkafka.com:9094
 spring.kafka.properties.security.protocol=SASL_SSL
 spring.kafka.properties.sasl.mechanism=SCRAM-SHA-512
-spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="gbhfmvzr" password="${KARAFKA_PASSWORD}";
-spring.cloud.stream.bindings.avgPulseProbeConsumer-in-0.destination=gbhfmvzr-avg-values
-spring.cloud.stream.bindings.avgPulseProbeConsumer-in-0.group=gbhfmvzr-average-populator
+spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="fxhczgpu" password="${KARAFKA_PASSWORD}";
+spring.cloud.stream.bindings.avgPulseProbeConsumer-in-0.destination=fxhczgpu-avg-values
+spring.cloud.stream.bindings.avgPulseProbeConsumer-in-0.group=fxhczgpu-average-populator
 app.avg.binding.name=avgValues-out-0
-spring.cloud.stream.bindings.avgValues-out-0.destination=gbhfmvzr-avg-values
-spring.cloud.stream.bindings.pulseProbeConsumerJumps-in-0.destination=gbhfmvzr-default
-spring.cloud.stream.bindings.pulseProbeConsumerJumps-in-0.group=gbhfmvzr-jumps-detector
-spring.cloud.stream.bindings.pulseProbeConsumerAvg-in-0.destination=gbhfmvzr-default
-spring.cloud.stream.bindings.pulseProbeConsumerAvg-in-0.group=gbhfmvzr-average-reducer
+spring.cloud.stream.bindings.avgValues-out-0.destination=fxhczgpu-avg-values
+spring.cloud.stream.bindings.pulseProbeConsumerJumps-in-0.destination=fxhczgpu-default
+spring.cloud.stream.bindings.pulseProbeConsumerJumps-in-0.group=fxhczgpu-jumps-detector
+spring.cloud.stream.bindings.pulseProbeConsumerAvg-in-0.destination=fxhczgpu-default
+spring.cloud.stream.bindings.pulseProbeConsumerAvg-in-0.group=fxhczgpu-average-reducer
 app.jumps.binding.name=jumps-out-0
-spring.cloud.stream.bindings.jumps-out-0.destination=gbhfmvzr-jumps
-spring.cloud.stream.bindings.jumpsConsumer-in-0.destination=gbhfmvzr-jumps
-spring.cloud.stream.bindings.jumpsConsumer-in-0.group=gbhfmvzr-jumps-notifier
+spring.cloud.stream.bindings.jumps-out-0.destination=fxhczgpu-jumps
+spring.cloud.stream.bindings.jumpsConsumer-in-0.destination=fxhczgpu-jumps
+spring.cloud.stream.bindings.jumpsConsumer-in-0.group=fxhczgpu-jumps-notifier
 
 # Redis configuration
 spring.data.redis.host=redis-16143.c250.eu-central-1-1.ec2.cloud.redislabs.com
