--- a/jumps-email-notifier.properties
+++ b/jumps-email-notifier.properties
@@ -5,3 +5,4 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.debug=true
+app.email.provider.port=${email-provider-port}
