--- a/gateway.properties
+++ b/gateway.properties
@@ -1,4 +1,4 @@
-app.routed.urls={data:'http://localhost:8080', pulse:'http://localhost:9090'}
+app.routed.urls={data:'http://email-data-provider:8080', pulse:'http://pulse-values-back-office:9090'}
 server.port=9292
 app.jwt.signature.secret=${JWT_SECRET}
 app.accounts.admin.password=${ADMIN_PASSWORD}
