--- a/application.properties
+++ b/application.properties
@@ -33,7 +33,7 @@ spring.cloud.stream.bindings.jumpsConsumer-in-0.destination=fxhczgpu-jumps
 spring.cloud.stream.bindings.jumpsConsumer-in-0.group=fxhczgpu-jumps-notifier
 
 # Redis configuration
-spring.data.redis.host=redis-18598.c250.eu-central-1-1.ec2.cloud.redislabs.com
-spring.data.redis.port=18598
+spring.data.redis.host=redis-10128.c311.eu-central-1-1.ec2.redns.redis-cloud.com
+spring.data.redis.port=10128
 spring.data.redis.username=default
 spring.data.redis.password=${REDIS_PASSWORD}
